package quemepongo.v5.domain.prendas;

public enum Categoria {
    SUPERIOR,
    INFERIOR,
    CALZADO,
    ACCESORIO
}
