package quemepongo.v5.domain.prendas;

public enum Formalidad {
  FORMAL,
  INFORMAL,
  NEUTRO
}
