package quemepongo.v5.domain.prendas;

public enum Trama {
  LISO,
  RAYADO,
  LUNARES,
  CUADROS,
  ESTAMPADO
}
